# Pigal-Flask

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/source/: advanced.rst  advanced_auth.rst  advanced_databases.rst  advanced_extensions.rst  advanced_home.rst  advanced_integration.rst  advanced_rbac.rst  advanced_themes.rst  api.rst  api_commands.rst  api_exceptions.rst  api_extensions.rst  api_utils.rst  basic.rst  basic_backends.rst  basic_collaboration.rst  basic_databases.rst  basic_frontends.rst  basic_pages.rst  basic_projects.rst  basic_services.rst  conf.py  index.rst  intro.rst  intro_pages.rst  intro_project.rst  intro_services.rst  modules.rst  pigal_flask.rst  tuto.rst  tuto_app.rst  tuto_home.rst
examples/01_basic/app/: __init__.py  config.py  extensions.py
examples/02_databases/app/: __init__.py  config.py  extensions.py
examples/basic_api/: app.py
examples/basic_app/: app.py
examples/basic_backend/: app.py
examples/basic_database/app/: __init__.py  config.py
examples/basic_frontend/: app.py
examples/basic_frontend/app/: __init__.py
pigal_flask/: __init__.py  __main__.py  commands.py  constants.py  exceptions.py  extensions.py  utils.py
tests/: conftest.py
tests/commands/: test_create_pages.py  test_create_project.py  test_create_service.py
tests/extensions/: test_pigal.py  test_pigal_db.py
tests/integration/: conftest.py  pytest.ini  test_basic.py  test_databases.py  xtest_databases.py
tests/units/: conftest.py  pytest.ini
tests/utils/: test_pigal_api.py  test_pigal_ui.py
(+26 files in other folders)
