[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pigal-Flask"
version = "0.1.0"
description = "A Flask extension to facilitates Pigal project creation"
readme = "README.md"
authors = [{ name = "Malcom Chumchoua Penda", email = "malcom.chumchouapenda@yahoo.fr" }]
dependencies = [
    "click >= 8.1.8",
    "cookiecutter >= 2.6.0",
    "flask >= 3.1.2",
    "flask-restx >= 1.3.0",
    "flask-sqlalchemy >= 3.1.1"
]

[project.scripts]
pigal = "pigal_flask.__main__:cli"
